<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">List Diary</string>
    <string name="text_welcome">Welcome to the List Diary</string>
    <string name="text_rights">All rights reserved</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="perm_granted">Permission granted</string>
    <string name="perm_denied">Permission denied</string>
    <string name="navigation_drawer_open">Open the navigation drawer</string>
    <string name="navigation_drawer_close">Close the navigation drawer</string>
    <string name="nav_header_title">Lists</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="no_title">No title</string>
    <string name="no_name">No name</string>
    <string name="no_data">No data</string>
    <string name="no_desc">Description: None</string>
    <string name="hint_settings">Open the application settings</string>
    <string name="hint_add_list">Add a new list</string>
    <string name="hint_add_task">Add a new task</string>
    <string name="hint_cancel_list">Cancel the new list</string>
    <string name="hint_accept_list">Accept the new list</string>
    <string name="hint_cancel_task">Cancel the new task</string>
    <string name="hint_accept_task">Accept the new task</string>
    <string name="hint_cancel_edit">Undo the changes</string>
    <string name="hint_accept_edit">Save the changes</string>
    <string name="hint_date_edit">Save and date the changes</string>
    <string name="hint_delete_field">Delete the chosen field</string>
    <string name="hint_add_field">Add the new written field</string>
    <string name="hint_show_field">Field %1$s of type %2$s</string>
    <string name="hint_back_list">Return to the list</string>
    <string name="hint_search">Search here</string>
    <string name="action_search_tasks">Search tasks</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_edit_list">Edit list</string>
    <string name="action_delete_list">Delete list</string>
    <string name="action_copy_list">Copy list</string>
    <string name="action_edit_task">Edit task</string>
    <string name="action_delete_task">Delete task</string>
    <string name="action_copy_task">Copy task</string>
    <string name="about_version">Version %s</string>
    <string name="about_desc">Manager of lists with definable fields and of tasks with a record where to record its chosen changes.</string>
    <string name="about_firm">Developed by <b>Raul Martin Perez</b> and supervised by <b>Jose F. Velez Serrano</b>.</string>
    <string name="about_report">Report of bugs and suggestions:</string>
    <string name="about_email" translatable="false"><u>raumar95@gmail.com</u></string>
    <string name="about_chooser">Send an e-mail using…</string>
    <string name="about_no_email">No e-mail clients installed</string>
    <string name="about_no_browser">No browser apps installed</string>
    <string name="icons8_text">Download free icons, photos, vectors… - Icons8</string>
    <string name="icons8_link">https://icons8.com/</string>
    <string name="icons8_chooser">Open the Icons8 link using…</string>
    <string name="privacy_text"><u>Privacy Policy</u></string>
    <string name="privacy_link">https://rmartinper.github.io/List-Diary/privacy-policy-en.html</string>
    <string name="privacy_chooser">Open the Privacy Policy using…</string>
    <string name="new_list_header">New List</string>
    <string name="add_list_header">Add List</string>
    <string name="edit_list_header">Edit List</string>
    <string name="delete_list_header">Delete List</string>
    <string name="copy_list_header">Copy List</string>
    <string name="new_task_header">New Task</string>
    <string name="add_task_header">Add Task</string>
    <string name="edit_task_header">Edit Task</string>
    <string name="delete_task_header">Delete Task</string>
    <string name="copy_task_header">Copy Task</string>
    <string name="are_sure_delete_list">Are you sure you want to delete this list?</string>
    <string name="are_sure_cancel_new_list">Are you sure you want to exit the list?</string>
    <string name="are_sure_cancel_edit_list">Are you sure you want to undo the changes and return to the list?</string>
    <string name="are_sure_accept_new_list">Are you sure you want to save the list?</string>
    <string name="are_sure_accept_edit_list">Are you sure you want to save the changes and return to the list?</string>
    <string name="are_sure_delete_task">Are you sure you want to delete this task?</string>
    <string name="are_sure_cancel_new_task">Are you sure you want to exit the task?</string>
    <string name="are_sure_cancel_edit_task">Are you sure you want to undo the changes and return to the task?</string>
    <string name="are_sure_date_edit_task">Are you sure you want to save and date the changes and return to the task?</string>
    <string name="are_sure_accept_new_task">Are you sure you want to save the task?</string>
    <string name="are_sure_accept_edit_task">Are you sure you want to save the changes and return to the task?</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="data_success_exported">Data successfully exported</string>
    <string name="data_success_imported">Data successfully imported</string>
    <string name="data_unsuccess_exported">Data unsuccessfully exported</string>
    <string name="data_unsuccess_imported">Data unsuccessfully imported</string>
    <string name="select_folder">Select the folder in which to export the data</string>
    <string name="select_file">Select the file from which to import the data</string>
    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_exist">Nonexistent</string>
    <string name="exist">Existent</string>
    <string name="list_name_header">Name:</string>
    <string name="list_task_desc_header">Description:</string>
    <string name="list_name_field">name</string>
    <string name="list_task_desc_field">description</string>
    <string name="hint_list_name_header">Enter the name</string>
    <string name="hint_list_task_desc_header">Enter the description</string>
    <string name="hint_list_field_header">Enter the new field</string>
    <string name="invalid_name_new_list">Sorry, but the name of the new list is invalid. Please, change it and try again.</string>
    <string name="invalid_new_name_edit_list">Sorry, but the new name of the list is invalid. Please, change it and try again.</string>
    <string name="unselected_field_list">Sorry, but you haven\'t selected any field. Please, select one and try again.</string>
    <string name="empty_field_list">Sorry, but the field is empty. Please, enter it and try again.</string>
    <string name="existing_predefined_field_list">Sorry, but a predefined field with that name already exists. Please, try again.</string>
    <string name="existing_defined_field_list">Sorry, but a defined field with that name already exists. Please, try again.</string>
    <string name="created_new_list">New list successfully created</string>
    <string name="edited_list">List successfully modified</string>
    <string name="deleted_list">List successfully deleted</string>
    <string name="problem_deleting_list">Sorry, the list could not be deleted</string>
    <string name="task_predefined_header">Predefined fields</string>
    <string name="task_defined_header">Defined fields</string>
    <string name="task_title_header">Title:</string>
    <string name="task_start_header">Start date:</string>
    <string name="task_title_field">title</string>
    <string name="task_start_field">start date</string>
    <string name="task_records_header">Record</string>
    <string name="hint_task_title_header">Enter the title</string>
    <string name="hint_task_start_header">Enter the start date</string>
    <string name="hint_task_field_header">Enter the field</string>
    <string name="hint_task_history">History of the state of the fields of the task before %s</string>
    <string name="invalid_title_new_task">Sorry, but the title of the new task is invalid. Please, change it and try again.</string>
    <string name="invalid_new_title_edit_task">Sorry, but the new title of the task is invalid. Please, change it and try again.</string>
    <string name="created_new_task">New task successfully created</string>
    <string name="edited_task">Task successfully modified</string>
    <string name="deleted_task">Task successfully deleted</string>
    <string name="problem_deleting_task">Sorry, the task could not be deleted</string>
    <string-array name="spinner_items">
        <item>String</item>
        <item>Number</item>
        <item>Date</item>
    </string-array>
</resources>
