<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search_tasks"
        android:icon="@drawable/ic_search_white_32dp"
        android:title="@string/action_search_tasks"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_edit_list"
        android:title="@string/action_edit_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_list"
        android:title="@string/action_delete_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_main"
        android:icon="@drawable/ic_info_white_32dp"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>