<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/about_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:contentDescription="Logo of the App"
            app:srcCompat="@drawable/logo_app" />

        <TextView
            android:id="@+id/about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:includeFontPadding="false"
            android:textColor="#448AFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:includeFontPadding="false"
            android:text="@string/about_desc"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/about_firm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/about_firm"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/about_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:includeFontPadding="false"
            android:text="@string/about_report"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:clickable="true"
            android:focusable="true"
            android:includeFontPadding="false"
            android:text="@string/about_email"
            android:textColor="@color/link_color"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/about_icons8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bkgd_icons8_link"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/icons8_logo"
                android:layout_width="45dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="Logo of Icons8"
                app:srcCompat="@drawable/icons8_cup" />

            <View
                android:id="@+id/icons8_divider"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/icons8_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/icons8_text"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/about_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:includeFontPadding="false"
            android:text="@string/privacy_text"
            android:textColor="@color/link_color"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
