<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="88dp"
    tools:context=".EditTaskActivity"
    tools:ignore="Autofill"
    tools:showIn="@layout/activity_edit_task">

    <LinearLayout
        android:id="@+id/layout_edit_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_predefined_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_predefined_edit_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/task_predefined_header"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/v_predefined_edit_task"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_title_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title_edit_task"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/task_title_header"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_title_edit_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_task_title_header"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_desc_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_desc_edit_task"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/list_task_desc_header"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_desc_edit_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_list_task_desc_header"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_start_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_start_edit_task"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/task_start_header"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_start_edit_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_task_start_header"
                android:inputType="date"
                android:maxLines="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_defined_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_defined_edit_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/task_defined_header"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/v_defined_edit_task"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_values_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical" />

    </LinearLayout>

</ScrollView>