<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="88dp"
    tools:context=".EditListActivity"
    tools:ignore="Autofill"
    tools:showIn="@layout/activity_edit_list">

    <LinearLayout
        android:id="@+id/layout_edit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_name_edit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name_edit_list"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/list_name_header"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name_edit_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_list_name_header"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_desc_edit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_desc_edit_list"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/list_task_desc_header"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_desc_edit_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_list_task_desc_header"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_field_edit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_field_edit_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:ems="10"
                android:hint="@string/hint_list_field_header"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btn_field_edit_list"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/bkgd_field_button"
                android:contentDescription="@string/hint_add_field"
                app:srcCompat="@drawable/ic_row_add_white_36dp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_edit_list"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp" />

        <LinearLayout
            android:id="@+id/layout_fields_edit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:choiceMode="singleChoice"
            android:divider="@drawable/divider_horizontal"
            android:orientation="vertical"
            android:showDividers="middle" />

    </LinearLayout>

</ScrollView>