<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/settings_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/settings_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bkgd_settings_button"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/export_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="Image of the export"
                app:srcCompat="@drawable/ic_data_export_white_48dp" />

            <TextView
                android:id="@+id/export_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/export_data"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:id="@+id/settings_divider"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <LinearLayout
            android:id="@+id/settings_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bkgd_settings_button"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/import_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="Image of the import"
                app:srcCompat="@drawable/ic_data_import_white_48dp" />

            <TextView
                android:id="@+id/import_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/import_data"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/settings_exit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/settings_info"
        android:background="@drawable/bkgd_custom_button"
        android:text="@string/close"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>